# age-plugin-yubikey-daemon

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PKGBUILD  README.md
contrib/: age-plugin-yubikey-agent.service  age-plugin-yubikey-agent.socket  age-plugin-yubikey-daemon.service  age-plugin-yubikey-daemon.socket
src/: convert_identities.rs  daemon.rs  lib.rs  main.rs  plugin.rs  protocol.rs  protocol_tests.rs  socket.rs  stanza.rs  stanza_tests.rs
