[package]
name = "age-plugin-yubikey-daemon"
description = "YubiKey PIN-caching daemon for age-plugin-yubikey decryption"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/brongan/age-plugin-yubikey-daemon"
readme = "README.md"
keywords = ["age", "yubikey", "piv", "encryption", "daemon"]
categories = ["cryptography", "command-line-utilities"]

[dependencies]
# age ecosystem
age-core = "0.11"
age-plugin = "0.6"
base64 = "0.22"

# YubiKey PIV
yubikey = { version = "=0.8.0-pre.0", features = ["untested"] }

# Crypto
p256 = { version = "0.13", features = ["ecdh", "serde"] }
sha2 = "0.10"
zeroize = "1"
zerocopy = { version = "0.8", features = ["derive"] }

serde = { version = "1", features = ["derive"] }
tarpc = { version = "0.37", features = ["serde-transport", "unix"] }
tokio-serde = { version = "0.9", features = ["bincode"] }
futures = "0.3"

# Socket activation
listenfd = "1.0"

# Runtime
log = "0.4"
thiserror = "2.0"
env_logger = "0.11"
bech32 = "0.11"
xdg = "3"
tokio = { version = "1", features = ["rt", "net", "macros", "signal", "io-util", "sync"] }

[dev-dependencies]
rand = "0.8"
